tests/fixtures/invalid/bool_sub_set.py
# Cannot subtract Bool and Set[int]
x: bool = True - {1, 2, 3}
